# Counterspell-Autonomous-Detection-Engineer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  LICENSE  NOTICE  PITCH.md  README.md  SETUP.md  architecture.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: generate_synthetic_data.py
docs/: 01_OVERVIEW.md  02_DAY0_GATE.md  03_AGENT_DESIGN.md  03_ARCHITECTURE.md  05_FILE_STRUCTURE.md  05_PROMPT_LIBRARY.md  06_DATA_MODEL.md  07_FILE_STRUCTURE.md  08_BUILD_SCHEDULE.md  09_DEMO_SCRIPT.md
runs/: 2026-05-29.jsonl  2026-06-08.jsonl  2026-06-10.jsonl  2026-06-12.jsonl
scripts/: check_data_acceptance.py  check_generalization.py  cs_dashboard_runner.py  export_navigator_layer.py  generate_icons.py  package_app.py  run_all_demos.py  run_demo.py  verify_environment.py
splunk_app/: README.txt
splunk_app/default/: app.conf  collections.conf  commands.conf  restmap.conf  transforms.conf
src/counterspell/: __init__.py  config.py  llm_client.py  mcp_client.py  orchestrator.py  prompts.py  schemas.py  splunk_client.py
tests/: conftest.py  test_deployer_es.py  test_export_navigator_layer.py  test_llm_client.py  test_mcp_client.py  test_orchestrator.py  test_orchestrator_extras.py  test_redteam_repair.py  test_schemas.py  test_translator.py  test_validator.py
threats/: README.md  cve_2024_23897_jenkins.md  cve_2024_3094_xz.md  t1003_lsass_dump.md  t1048_exfil.md  t1059_powershell_encoded.md  t1071_c2_beacon.md  t1078_impossible_travel.md  t1110_bruteforce.md  t1486_ransomware_burst.md
(+9 files in other folders)
