[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "counterspell"
version = "0.1.0"
description = "An autonomous detection engineer for Splunk."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "The Counterspell Authors" }]
keywords = ["splunk", "detection-engineering", "agents", "mcp", "foundation-sec"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "splunk-sdk==2.1.0",
  "openai>=1.30.0",
  "pydantic>=2.7.0",
  "requests>=2.31.0",
  "pyyaml>=6.0.1",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/counterspell"
Documentation = "https://github.com/your-org/counterspell/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]
include = ["counterspell*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning",
]
